<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPass5"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <ImageButton
        android:id="@+id/ibrp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:textColor="@color/black"
        android:src="@drawable/leftarrow96"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/rp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repa"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="16pt"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/rp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recopa"
        android:textSize="8pt"
        android:textStyle="bold"
        android:textColor="#9b9b9b"
        android:fontFamily="@font/montserrat_light"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rp1"
        />

    <TextView
        android:id="@+id/rp3"
        android:labelFor="@id/edrp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reco"
        android:textSize="10pt"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rp2"
        />
    <EditText
        android:id="@+id/edrp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyunum"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:textColor="@color/black"
        android:textColorHint="@color/abu"
        android:fontFamily="@font/montserrat_light"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rp3"
        />

    <TextView
        android:id="@+id/rp5"
        android:labelFor="@id/edrp6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nepa"
        android:textSize="10pt"
        android:layout_marginBottom="5pt"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edrp4"
        />
    <EditText
        android:id="@+id/edrp6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyupass"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/abu"
        android:fontFamily="@font/montserrat_light"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rp5"
        />

    <TextView
        android:id="@+id/rp7"
        android:labelFor="@id/edrp8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copa"
        android:textSize="10pt"
        android:layout_marginBottom="5pt"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edrp6"
        />
    <EditText
        android:id="@+id/edrp8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyucopass"
        android:textSize="8pt"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/abu"
        android:fontFamily="@font/montserrat_light"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rp7"
        />

    <Button
        android:id="@+id/rpbutton9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:text="@string/changep"
        android:textAllCaps="false"
        android:textSize="8pt"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edrp8"/>

</androidx.constraintlayout.widget.ConstraintLayout>