<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn3"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <ImageButton
        android:id="@+id/ibsi"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:textColor="@color/black"
        android:src="@drawable/leftarrow96"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/si1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wb"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="16pt"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="6pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/si2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sitocon"
        android:textSize="8pt"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#9b9b9b"
        android:fontFamily="@font/montserrat_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/si1"
        />

    <TextView
        android:id="@+id/si3"
        android:labelFor="@id/edsi4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suname"
        android:textSize="10pt"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/si2"
        />
    <EditText
        android:id="@+id/edsi4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyuname"
        android:textSize="8pt"
        android:layout_marginBottom="20pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/abu"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/si3"
        />

    <TextView
        android:id="@+id/si5"
        android:labelFor="@id/edsi6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spass"
        android:textSize="10pt"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edsi4"
        />
    <EditText
        android:id="@+id/edsi6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyupass"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/abu"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/si5"
        />

    <TextView
        android:id="@+id/si7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fopa"
        android:textSize="10pt"
        android:gravity="right"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edsi6"
        />

    <Button
        android:id="@+id/sibutton8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_red"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="8pt"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/si7"
        />

</androidx.constraintlayout.widget.ConstraintLayout>